...

    return null

  } else {
    return (
      <View style={styles.container}>
        <Text style={styles.title} testID={'Who\'s Watching ThinkStation?'}>
          Who&#39;s Watching ThinkStation?
            </Text>
        <FlatList
          style={styles.area}
          numColumns={2}
          keyExtractor={(item) => item.displayName}
...
