...
                <Text style={{
                    padding: "5%",
                    fontSize: 35,
                    color: "black",
                    flexShrink: 1,
                    textAlign: 'center'
                }} testID={'waitingForClass'}
                >Stream Hasn't Started</Text>
                <Image style={{ flex: 1, width: null, height: null, resizeMode: 'contain' }} source={require('assets/gifs/sleepycat.gif')} />
            </View>
        )
    } else {
        // hide quiz modal if not ready
...
